2006-12-04 [paul]	0.10.3

	0.10.3 released

2006-11-28 [paul]	0.10.2cvs3

	* configure.ac
		bump required version of Claws
		following renaming
		Thanks to Charles Edwards for the
		reminder

2006-11-27 [paul]	0.10.2cvs2

	* debian/README.Debian
	* src/plugin.c
		renaming

2006-11-07 [paul]	0.10.2cvs1

	* ChangeLog
	* configure.ac
	* debian/README.Debian
	* debian/changelog
	* debian/control
	* debian/copyright
	* debian/files
	* debian/rules
	* src/Makefile.am
	* src/plugin.c
		Name change

2006-09-25 [paul]	0.10.2

	0.10.2 released

2006-09-22 [ticho]	0.10.1cvs5

	* configure.ac
		Update required claws-mail version to 2.4.0.200.

2006-09-01 [wwp]	0.10.1cvs4

	* commitHelper
		sync w/ commitHelper in claws-mail module:
		use CVSEDITOR env. var. if set.

2006-08-27 [wwp]	0.10.1cvs3

	* src/plugin.c
		fix plugin compilation (N_ undefined).

2006-08-27 [colin]	0.10.1cvs2

	* src/plugin.c
		Implement plugin_provides()

2006-08-18 [paul]	0.10.1cvs1

	* configure.ac
		bump up GLib and GTK+ minimum required versions,
		following Claws

2006-06-12 [paul]	0.10.1

	0.10.1 released

2006-06-06 [wwp]	0.10.0cvs2

	* configure.ac
	* src/Makefile.am
	* src/plugin_version.h.in
	* src/plugin.c
	* src/.cvsignore
		fix/unify/simplify autostuff, get rid of src/plugin_version.h{,.in} (use pluginconfig.h instead).

2006-06-03 [wwp]	0.10.0cvs1

	* commitHelper
	* PATCHSETS
	* configure.ac
		introducing commitHelper for plugins too.

2006-05-21 [colin] 	0.10

	* src/plugin.c
		Fix gcc-2.9x compile
		Patch by Pawel Pekala.

2006-05-17 [wwp] 0.9

	* src/plugin.c
		Updated claws-mail product name.

2006-04-07 [colin] 	0.8

	* configure.ac
		Optionnaly handle --prefix.
		Patch by Pawel Pekala.

2005-12-15 [paul]	0.7

	* Add plugin_version()

2005-12-07 [colin]      0.6

	* Add plugin_licence()
	
2004-11-25 [colin]

	Initial release