@@ -8,3 +8,4 @@
 ( cvs diff -u -r 1.1.2.15 -r 1.1.2.16 ChangeLog;  cvs diff -u -r 1.1.2.17 -r 1.1.2.18 configure.ac;  cvs diff -u -r 1.1.2.1 -r 1.1.2.2 debian/README.Debian;  cvs diff -u -r 1.1.2.4 -r 1.1.2.5 debian/changelog;  cvs diff -u -r 1.1.2.3 -r 1.1.2.4 debian/control;  cvs diff -u -r 1.1.2.1 -r 1.1.2.2 debian/copyright;  cvs diff -u -r 1.1.2.1 -r 1.1.2.2 debian/files;  cvs diff -u -r 1.1.2.1 -r 1.1.2.2 debian/rules;  cvs diff -u -r 1.1.2.3 -r 1.1.2.4 src/Makefile.am;  cvs diff -u -r 1.1.2.8 -r 1.1.2.9 src/plugin.c;  ) > 0.10.2cvs1.patchset
 ( cvs diff -u -r 1.1.2.2 -r 1.1.2.3 debian/README.Debian;  cvs diff -u -r 1.1.2.9 -r 1.1.2.10 src/plugin.c;  ) > 0.10.2cvs2.patchset
 ( cvs diff -u -r 1.1.2.19 -r 1.1.2.20 configure.ac;  ) > 0.10.2cvs3.patchset
+( cvs diff -u -r 1.1.2.21 -r 1.1.2.22 configure.ac;  cvs diff -u -r 1.1.2.10 -r 1.1.2.11 src/plugin.c;  ) > 0.10.3cvs1.patchset
