@@ -1,3 +1,9 @@
+2006-12-15 [ticho]	0.10.3cvs1
+
+	* configure.ac
+	* src/plugin.c
+		Use check_plugin_version() for version check.
+
 2006-12-04 [paul]	0.10.3
 
 	0.10.3 released
